--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 
 .Navbar ul {
   display: flex;
+  align-items: center;
   gap: 25px;
 }
 
@@ -34,28 +35,50 @@
 
 /* Left Menu Item Targeting */
 .navbar-leftMenu {
+  height: 100%;
   margin-left: 25px;
 }
 
 .logo img {
-  width: 50px;
+  width: 45px;
   height: auto;
 
   border-radius: 75%;
 }
 
 .navbar-leftMenu li {
+  height: 100%;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .leftMenu-item.search {
+  padding: 0 5px 0 5px;
+  height: 70%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   color: rgb(100, 103, 107);
+  background-color: rgb(239, 242, 245);
+  border-radius: 15px;
+}
+
+.search-input {
+  height: 100%;
+  width: 100px;
+  border: none;
+  background-color: rgb(239, 242, 245);
+}
+
+form {
+  height: 80%;
 }
 
 /* Right Menu Item Targeting */
-
 .navbar-rightMenu {
   margin-right: 25px;
 }
