--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,11 @@
 
 .search-input {
   height: 100%;
-  width: 100px;
+  width: 125px;
+  padding-left: 10px;
+
   border: none;
+  outline: none;
   background-color: rgb(239, 242, 245);
 }
 
@@ -81,4 +84,10 @@ form {
 /* Right Menu Item Targeting */
 .navbar-rightMenu {
   margin-right: 25px;
+}
+
+/* Mid Menu Targeting */
+
+.menu-item {
+  color: rgb(100, 103, 107);
 }
