--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,9 +4,12 @@
   padding: 0;
 }
 
+html {
+  background-color: rgb(239, 242, 245);
+}
+
 .App {
   height: 100%;
-  background-color: black;
 }
 
 .main-container {
@@ -20,17 +23,17 @@
 .main-container-leftBar {
   flex: 1.25;
   /* Test */
-  outline: auto;
+  /* outline: auto; */
 }
 
 .main-container-content {
   flex: 3;
   /* Test */
-  outline: auto;
+  /* outline: auto; */
 }
 
 .main-container-rightBar {
   flex: 1.25;
   /* Test */
-  outline: auto;
+  /* outline: auto; */
 }
