--- a/src/styles/LeftSideBar.css
+++ b/src/styles/LeftSideBar.css
@@ -1,22 +1,31 @@
 .LeftSideBar {
-  color: white;
+  font-size: 20px;
 }
 
 .leftSideBar-nav {
+  max-width: 300px;
+
   margin-top: 25px;
   padding-left: 25px;
 
   display: flex;
   flex-direction: column;
 
-  gap: 25px;
+  gap: 15px;
 }
 
 .leftSideBar-nav-item {
-  font-size: 25px;
   list-style: none;
+  cursor: pointer;
+
+  padding: 10px;
+  border-radius: 15px;
 
   display: flex;
+}
+
+.leftSideBar-nav-item:hover {
+  background-color: rgb(214, 215, 216);
 }
 
 .nav-item-iconHolder {
