--- a/src/styles/RightSideBar.css
+++ b/src/styles/RightSideBar.css
@@ -3,7 +3,8 @@
   width: 80%;
   margin-top: 25px;
 
-  font-size: 20px;
+  font-size: 15px;
+  font-size: 1.75vw;
   text-align: center;
 }
 
@@ -41,7 +42,8 @@
 
 .RightSideBar button {
   margin-top: 10px;
-  font-size: 20px;
+  font-size: 15px;
+  font-size: 1.75vw;
   padding: 15px;
   border-radius: 15px;
   cursor: pointer;
