perfect dynamic spacing in navbar items using flex properties and precise allignment

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,7 +5,6 @@
   width: 100%;
 
   display: flex;
-  justify-content: space-between;
   align-items: center;
 
   background-color: rgb(255, 255, 255);
@@ -77,11 +76,17 @@ form {
 .navbar-rightMenu {
   color: rgb(100, 103, 107);
   margin-right: 25px;
+  justify-content: flex-end;
+
+  flex: 2;
 }
 
 /* Mid Menu Targeting */
 .navbar-menu {
   gap: 25px;
+  justify-content: center;
+
+  flex: 5;
 }
 
 .menu-item {
