--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,12 +9,16 @@ html {
   background-color: rgb(239, 242, 245);
 }
 
+#root {
+  height: 100vh;
+}
+
 .App {
   height: 100%;
 }
 
 .main-container {
-  height: 100%;
+  height: 90%;
 
   display: flex;
   align-items: stretch;
