--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -1,6 +1,9 @@
 .Post {
   width: 60%;
   padding: 15px;
+
+  border-radius: 15px;
+  background-color: white;
 }
 
 /* First Major Component Of Post */
@@ -11,9 +14,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  /* Testing */
-  border: solid grey 2px;
 }
 
 .postInfo-main {
@@ -28,6 +28,9 @@
 
 .postInfo-main-user {
   padding-left: 25px;
+}
+.details-username {
+  font-weight: bolder;
 }
 
 .postInfo-main-details {
@@ -47,6 +50,8 @@
   padding: 5px 10px 5px 10px;
   border-radius: 30%;
   cursor: pointer;
+  border: none;
+  background-color: white;
 }
 .editPost-btn:hover {
   background-color: rgb(214, 215, 216);
@@ -56,8 +61,8 @@
 
 .PostNavbar {
   margin-top: 10px;
-  border-top: solid 2px grey;
-  border-bottom: solid 2px grey;
+  border-top: solid 2px rgb(205, 208, 212);
+  border-bottom: solid 2px rgb(205, 208, 212);
 
   display: flex;
   justify-content: space-around;
@@ -71,7 +76,54 @@
 
   text-align: center;
   cursor: pointer;
+
+  color: rgb(101, 109, 119);
 }
 .postNavbar-item:hover {
   background-color: rgb(214, 215, 216);
+}
+
+/* THIRD MAJOR POST SUB COMPONENT */
+.PostComments {
+}
+
+.Comment {
+  display: flex;
+  padding: 15px;
+}
+
+.comment-icon {
+  display: block;
+  margin-right: 15px;
+}
+
+.comment-description-user {
+  font-size: 15px;
+  font-weight: bolder;
+}
+
+/* FOURTH MAJOR POST SUB COMPONENT */
+
+.PostAddComment {
+  display: flex;
+  align-items: center;
+
+  padding: 15px;
+}
+
+.comment-description {
+  border-radius: 15px;
+  width: 90%;
+  padding: 5px;
+  background-color: rgb(239, 242, 245);
+}
+.postAddComment-user {
+  margin-right: 15px;
+}
+.postAddComment-input input {
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: rgb(239, 242, 245);
 }
