--- a/src/styles/RightSideBar.css
+++ b/src/styles/RightSideBar.css
@@ -1,10 +1,11 @@
 .RightSideBar {
   color: rgb(100, 103, 107);
-  width: 85%;
+  /* width: 85%; */
+  width: 70%;
   margin-top: 25px;
 
   font-size: 15px;
-  font-size: 1.25vw;
+  font-size: 1.2vw;
   text-align: center;
 }
 
@@ -43,7 +44,7 @@
 .RightSideBar button {
   margin-top: 10px;
   font-size: 15px;
-  font-size: 1.25vw;
+  font-size: 1.15vw;
   padding: 15px;
   border-radius: 15px;
   cursor: pointer;
