--- a/src/styles/LeftSideBar.css
+++ b/src/styles/LeftSideBar.css
@@ -6,12 +6,12 @@
   max-width: 300px;
 
   margin-top: 25px;
-  padding-left: 25px;
+  padding-left: 10px;
 
   display: flex;
   flex-direction: column;
 
-  gap: 15px;
+  gap: 5px;
 }
 
 .leftSideBar-nav-item {
@@ -32,24 +32,20 @@
   display: block;
   width: 50px;
   min-width: 50px;
+  font-size: 22px;
 }
-
 .nav-item-iconHolder.fb-blue {
   color: rgb(26, 115, 228);
 }
-
 .nav-item-iconHolder.fb-lightBlue {
   color: rgb(53, 183, 219);
 }
-
 .nav-item-iconHolder.fb-purple {
   color: rgb(195, 49, 175);
 }
-
 .nav-item-iconHolder.fb-orange {
   color: rgb(230, 78, 41);
 }
-
 .nav-item-iconHolder.fb-red {
   color: rgb(237, 59, 90);
 }
