--- a/src/styles/MainContent.css
+++ b/src/styles/MainContent.css
@@ -10,14 +10,16 @@
 /* Popup Form Component */
 .PopupForm {
   width: 80%;
+  padding: 15px;
 
-  /* Test */
-  outline: auto;
+  border-radius: 15px;
+  background-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 /* Basic Upper section with title and close button */
 .popupForm-title {
-  padding: 15px;
+  padding: 5px 0 10px 0;
   border-bottom: solid grey 1px;
 
   display: flex;
@@ -25,21 +27,83 @@
 }
 .popupForm-title-item.close {
   margin-left: auto;
+  cursor: pointer;
+}
+.popupForm-title-item.close:hover {
+  color: red;
 }
 
 /* User info and icon */
 .popupForm-userInfo {
-  padding: 15px;
-
+  padding: 10px 0 10px 0;
   display: flex;
   align-items: center;
+}
 
-  /* Test */
-  outline: auto;
+.popupForm-userInfo-data-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 2px 0 2px 0;
+  background-color: rgb(228, 230, 235);
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .popupForm-userInfo-icon {
   margin-right: 15px;
 }
-.popupForm-userInfo-data {
+
+/* Input information */
+.popupForm-input {
+  font-size: 20px;
+  width: 90%;
+  min-height: 100px;
+  outline: none;
+  border: none;
+  resize: none;
+}
+
+/* Sub navbar */
+.popupForm-subNavbar {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  border: solid rgb(206, 208, 212) 1px;
+  border-radius: 5px;
+}
+
+.subNavbar-addMore {
+  width: 50%;
+  margin-left: 25px;
+}
+.subNavbar-item {
+  padding: 5px;
+  margin-right: 2px;
+}
+.subNavbar-item:hover {
+  background-color: rgb(228, 230, 235);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Form Submit */
+.popupForm-submit {
+  width: 100%;
+
+  font-size: 15px;
+  font-weight: bolder;
+
+  padding: 10px;
+  margin: 10px 0 10px 0;
+  border: none;
+  border-radius: 5px;
+
+  color: white;
+  background-color: rgb(27, 116, 228);
+  cursor: pointer;
+}
+.popupForm-submit {
+  background-color: rgb(17, 104, 211);
 }
