--- a/src/styles/CreatePost.css
+++ b/src/styles/CreatePost.css
@@ -17,6 +17,8 @@
   padding-left: 25px;
 }
 .createPost-submission-input {
+  text-align: left;
+  cursor: pointer;
   width: 100%;
 
   background-color: rgb(239, 242, 245);
@@ -27,6 +29,9 @@
 
   padding: 5px;
   margin-right: 15px;
+}
+.createPost-submission-input:hover {
+  background-color: rgb(228, 230, 235);
 }
 
 .createPost-nav {
