--- a/src/styles/CreatePost.css
+++ b/src/styles/CreatePost.css
@@ -21,7 +21,7 @@
   cursor: pointer;
   width: 100%;
 
-  background-color: rgb(239, 242, 245);
+  background-color: var(--fb-lightGrey);
   border-radius: 15px;
 
   outline: none;
@@ -31,7 +31,7 @@
   margin-right: 15px;
 }
 .createPost-submission-input:hover {
-  background-color: rgb(228, 230, 235);
+  background-color: var(--fb-grey-hover);
 }
 
 .createPost-nav {
@@ -47,7 +47,7 @@
   flex: 1;
 }
 .createPost-nav-item:hover {
-  background-color: rgb(214, 215, 216);
+  background-color: var(--fb-grey-hover);
   cursor: pointer;
 }
 
