--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,4 +1,3 @@
-/* Overall Navbar Targeting */
 .Navbar {
   height: 60px;
   max-height: 60px;
@@ -9,8 +8,7 @@
   display: flex;
   align-items: center;
 
-  background-color: rgb(255, 255, 255);
-  /* Implement A better way to collapse navbar */
+  background-color: white;
   overflow: hidden;
 }
 
@@ -55,7 +53,7 @@
   justify-content: center;
   align-items: center;
 
-  color: rgb(100, 103, 107);
+  color: var(--fb-darkGrey);
   background-color: rgb(239, 242, 245);
   border-radius: 15px;
 }
@@ -76,7 +74,7 @@ form {
 
 /* Right Menu Item Targeting */
 .navbar-rightMenu {
-  color: rgb(100, 103, 107);
+  color: var(--fb-darkGrey);
   margin-right: 25px;
   justify-content: flex-end;
 
@@ -92,13 +90,13 @@ form {
 }
 
 .menu-item {
-  color: rgb(100, 103, 107);
+  color: var(--fb-darkGrey);
   padding: 10px 20px 10px 20px;
 }
 
 .menu-item:hover {
-  color: rgb(26, 115, 228);
-  border-bottom: rgb(26, 115, 228) solid 5px;
+  color: var(--fb-blue);
+  border-bottom: var(--fb-blue) solid 5px;
 }
 
 @media (max-width: 800px) {
