--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -59,7 +59,7 @@
   background-color: white;
 }
 .editPost-btn:hover {
-  background-color: rgb(214, 215, 216);
+  background-color: var(--fb-grey-hover);
 }
 
 /* SECOND MAJOR POST COMPONENT */
@@ -85,7 +85,7 @@
   color: rgb(101, 109, 119);
 }
 .postNavbar-item:hover {
-  background-color: rgb(214, 215, 216);
+  background-color: var(--fb-grey-hover);
 }
 
 /* THIRD MAJOR POST SUB COMPONENT */
@@ -121,7 +121,7 @@
   border-radius: 15px;
   width: 90%;
   padding: 5px;
-  background-color: rgb(239, 242, 245);
+  background-color: var(--fb-lightGrey);
 }
 .postAddComment-user {
   margin-right: 15px;
@@ -135,5 +135,5 @@
   border-radius: 10px;
   padding: 5px;
   width: 100%;
-  background-color: rgb(239, 242, 245);
+  background-color: var(--fb-lightGrey);
 }
