--- a/src/styles/CreatePost.css
+++ b/src/styles/CreatePost.css
@@ -1,6 +1,6 @@
 .CreatePost {
-  width: 80%;
-  padding: 15px;
+  width: 85%;
+  padding: 15px 10px 10px 10px;
 
   border-radius: 15px;
   background-color: white;
@@ -13,9 +13,18 @@
 
   margin-bottom: 15px;
 }
+
 .createPost-submission-user {
   padding-left: 25px;
 }
+.createPost-submission-user img {
+  width: 50px;
+  height: auto;
+
+  border-radius: 50%;
+  border: solid 1px rgba(99, 99, 99, 0.2);
+}
+
 .createPost-submission-input {
   text-align: left;
   cursor: pointer;
@@ -27,7 +36,7 @@
   outline: none;
   border: none;
 
-  padding: 5px;
+  padding: 5px 5px 5px 10px;
   margin-right: 15px;
 }
 .createPost-submission-input:hover {
