--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -1,6 +1,6 @@
 .Post {
-  width: 80%;
-  padding: 15px;
+  width: 85%;
+  padding: 10px;
 
   border-radius: 15px;
   background-color: white;
@@ -21,27 +21,37 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: stretch;
+
+  height: 50px;
 }
+.postInfo-main-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .postInfo-description {
   padding-top: 10px;
   width: 100%;
   text-align: left;
 }
 
-.postInfo-main-user {
-  padding-left: 25px;
+.postInfo-main-user img {
+  width: 50px;
+  height: auto;
+
+  border-radius: 50%;
+  border: solid 1px rgba(99, 99, 99, 0.2);
 }
 .details-username {
   font-weight: bolder;
-}
-.details-postTime {
 }
 
 .postInfo-main-details {
   font-size: 15px;
   margin-right: auto;
-  padding-left: 25px;
+  padding-left: 15px;
 }
 .details-main-username {
   font-weight: bolder;
@@ -65,7 +75,7 @@
 /* SECOND MAJOR POST COMPONENT */
 
 .PostNavbar {
-  margin-top: 10px;
+  margin: 10px 0 10px 0;
   border-top: solid 2px rgb(205, 208, 212);
   border-bottom: solid 2px rgb(205, 208, 212);
 
@@ -100,7 +110,14 @@
 
 .comment-icon {
   display: block;
-  margin-right: 15px;
+  margin-right: 10px;
+}
+.comment-icon img {
+  width: 40px;
+  height: auto;
+
+  border-radius: 50%;
+  border: solid 1px rgba(99, 99, 99, 0.2);
 }
 
 .comment-description-user {
@@ -126,6 +143,13 @@
 .postAddComment-user {
   margin-right: 15px;
 }
+.postAddComment-user img {
+  width: 30px;
+
+  border-radius: 50%;
+  border: solid 1px rgba(99, 99, 99, 0.2);
+}
+
 .postAddComment-input {
   width: 90%;
 }
