comment communicates with main parent with postId when add like is triggered

--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -1,5 +1,5 @@
 .Post {
-  width: 85%;
+  width: 80%;
   padding: 10px;
 
   border-radius: 15px;
@@ -103,11 +103,13 @@
 }
 
 .Comment {
-  display: flex;
-  align-items: center;
-  padding: 10px;
 }
 
+.comment-main {
+  display: flex;
+  align-items: center;
+  padding: 10px 10px 0 10px;
+}
 .comment-icon {
   display: block;
   margin-right: 10px;
@@ -123,6 +125,32 @@
 .comment-description-user {
   font-size: 15px;
   font-weight: bolder;
+}
+
+/*  */
+.comment-interaction {
+  font-size: 12.5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-interaction-like {
+  color: var(--fb-grey-text);
+
+  padding-bottom: 10px;
+  padding-left: 70px;
+  cursor: pointer;
+}
+.comment-interaction-result {
+  padding-right: 15px;
+
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.result-icon {
+  color: var(--fb-blue);
 }
 
 /* FOURTH MAJOR POST SUB COMPONENT */
