--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -36,6 +36,20 @@
   width: 100%;
   text-align: left;
 }
+.postInfo-interactivity {
+  padding-top: 10px;
+  width: 100%;
+
+  font-size: 12.5px;
+  color: var(--fb-grey-text);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.interactivity-likes-icon {
+  color: var(--fb-blue);
+}
 
 .postInfo-main-user img {
   width: 50px;
@@ -75,7 +89,7 @@
 /* SECOND MAJOR POST COMPONENT */
 
 .PostNavbar {
-  margin: 10px 0 10px 0;
+  margin: 2.5px 0 10px 0;
   border-top: solid 2px rgb(205, 208, 212);
   border-bottom: solid 2px rgb(205, 208, 212);
 
