--- a/src/styles/CreatePost.css
+++ b/src/styles/CreatePost.css
@@ -4,7 +4,7 @@
 
   border-radius: 15px;
   background-color: white;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .createPost-submission {
@@ -26,6 +26,7 @@
 }
 
 .createPost-submission-input {
+  font-size: 16px;
   text-align: left;
   cursor: pointer;
   width: 100%;
