--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,7 @@
 
   background-color: white;
   overflow: hidden;
-  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .Navbar ul {
