--- a/src/styles/RightSideBar.css
+++ b/src/styles/RightSideBar.css
@@ -74,7 +74,7 @@
   list-style: none;
   padding: 2px 5px 2px 5px;
   border: solid black 2px;
-  outline: auto;
+  border-radius: 5px;
 }
 .squares-item.library {
   color: white;
