--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -36,6 +36,12 @@
   width: 100%;
   text-align: left;
 }
+.postInfo-description-picture {
+  margin-top: 10px;
+  width: 100%;
+  height: auto;
+}
+
 .postInfo-interactivity {
   padding-top: 10px;
   width: 100%;
