--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -60,6 +60,9 @@
   background-color: rgb(239, 242, 245);
   border-radius: 15px;
 }
+.leftMenu-item.logo {
+  color: var(--fb-darkGrey);
+}
 
 .search-input {
   height: 100%;
@@ -93,6 +96,7 @@
 
 /* Mid Menu Targeting */
 .navbar-menu {
+  color: var(--fb-darkGrey);
   gap: 25px;
   justify-content: center;
 
