control large image icon sizing

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -89,7 +89,7 @@
 
 .rightMenu-item img {
   width: 45px;
-  height: auto;
+  height: 45px;
   border-radius: 50%;
   border: solid 1px rgba(99, 99, 99, 0.2);
 }
