--- a/src/styles/CreatePost.css
+++ b/src/styles/CreatePost.css
@@ -19,7 +19,7 @@
 }
 .createPost-submission-user img {
   width: 50px;
-  height: auto;
+  height: 50px;
 
   border-radius: 50%;
   border: solid 1px rgba(99, 99, 99, 0.2);
