--- a/src/styles/LeftSideBar.css
+++ b/src/styles/LeftSideBar.css
@@ -32,7 +32,7 @@
 
 .nav-item-iconHolder.icon img {
   width: 30px;
-  height: auto;
+  height: 30px;
 
   border-radius: 50%;
   border: solid 1px rgba(99, 99, 99, 0.2);
