--- a/client/src/styles/_Home/_leftSideBar.scss
+++ b/client/src/styles/_Home/_leftSideBar.scss
@@ -1,43 +1,34 @@
 .LeftSideBar {
   font-size: calc(15px + 0.3vw);
 }
-
 .leftSideBar-nav {
   max-width: 300px;
-
   margin-top: 25px;
   padding-left: 10px;
-
   display: flex;
   flex-direction: column;
-
   gap: 5px;
 }
-
 .leftSideBar-nav-item {
   list-style: none;
   cursor: pointer;
   text-decoration: none;
-
   padding: 10px;
   border-radius: 15px;
-
   display: flex;
   align-items: center;
+  &:hover {
+    background-color: var(--fb-grey-hover);
+  }
 }
-
-.leftSideBar-nav-item:hover {
-  background-color: var(--fb-grey-hover);
+.nav-item-iconHolder.icon {
+  img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: solid 1px rgba(99, 99, 99, 0.2);
+  }
 }
-
-.nav-item-iconHolder.icon img {
-  width: 30px;
-  height: 30px;
-
-  border-radius: 50%;
-  border: solid 1px rgba(99, 99, 99, 0.2);
-}
-
 .nav-item-iconHolder {
   display: block;
   width: 50px;
