--- a/client/src/styles/_Home/_rightSideBar.scss
+++ b/client/src/styles/_Home/_rightSideBar.scss
@@ -2,77 +2,59 @@
   color: var(--fb-grey-text);
   width: 75%;
   margin-top: 25px;
-
   font-size: 15px;
   font-size: 1.2vw;
   text-align: center;
+  button {
+    margin-top: 10px;
+    font-size: 15px;
+    font-size: 1.15vw;
+    padding: 15px;
+    border-radius: 15px;
+    cursor: pointer;
+    border: none;
+    text-decoration: none;
+    &:hover {
+      background-color: var(--fb-grey-hover);
+    }
+  }
 }
-
 .rightSideBar-tech {
   margin-top: 25px;
   border-bottom: solid black 2px;
 }
-
-/* Unordered list of technologies */
 .technologies-item {
   list-style: none;
+  img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+  }
 }
-
 .technologies-item.title {
   font-weight: bolder;
   padding-bottom: 10px;
 }
-
-.technologies-item img {
-  width: 100%;
-  height: auto;
-  border-radius: 15px;
-}
-
-/* Last Section On Sidebar */
 .rightSideBar-section {
   margin-top: 15px;
-
   font-weight: bolder;
   border-top: solid 2px grey;
 }
-
-.RightSideBar button {
-  margin-top: 10px;
-  font-size: 15px;
-  font-size: 1.15vw;
-  padding: 15px;
-  border-radius: 15px;
-  cursor: pointer;
-
-  border: none;
-  text-decoration: none;
-}
-
-.RightSideBar button:hover {
-  background-color: var(--fb-grey-hover);
-}
-
 .newGroup-icon {
   margin-right: 5px;
   padding: 5px;
   border: solid grey 2px;
   border-radius: 5px;
 }
-
-/* Technology Squares */
 .technologies-squares {
   margin-top: 10px;
   font-size: 13px;
   font-weight: bold;
-
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-
   gap: 5px;
 }
-
 .squares-item {
   list-style: none;
   padding: 2px 3px 2px 3px;
