--- a/client/src/styles/_Home/_statusBar.scss
+++ b/client/src/styles/_Home/_statusBar.scss
@@ -1,4 +1,4 @@
-.CreatePost {
+.StatusBar {
   width: 85%;
   padding: 15px 10px 10px 10px;
 
@@ -7,17 +7,17 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
-.createPost-submission {
+.statusBar-submission {
   display: flex;
   gap: 25px;
 
   margin-bottom: 15px;
 }
 
-.createPost-submission-user {
+.statusBar-submission-user {
   padding-left: 25px;
 }
-.createPost-submission-user img {
+.statusBar-submission-user img {
   width: 50px;
   height: 50px;
 
@@ -25,7 +25,7 @@
   border: solid 1px rgba(99, 99, 99, 0.2);
 }
 
-.createPost-submission-input {
+.statusBar-submission-input {
   font-size: 16px;
   text-align: left;
   cursor: pointer;
@@ -40,23 +40,23 @@
   padding: 5px 5px 5px 10px;
   margin-right: 15px;
 }
-.createPost-submission-input:hover {
+.statusBar-submission-input:hover {
   background-color: var(--fb-grey-hover);
 }
 
-.createPost-nav {
+.statusBar-nav {
   display: flex;
   text-align: center;
 
   border-top: solid 2px rgb(205, 208, 212);
 }
-.createPost-nav-item {
+.statusBar-nav-item {
   margin: 5px 0px 0px 0px;
   padding: 10px;
   border-radius: 10px;
   flex: 1;
 }
-.createPost-nav-item:hover {
+.statusBar-nav-item:hover {
   background-color: var(--fb-grey-hover);
   cursor: pointer;
 }
@@ -75,7 +75,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .CreatePost {
+  .statusBar {
     width: 97%;
   }
 }
