--- a/client/src/styles/_forms/_createNewPostForm.scss
+++ b/client/src/styles/_forms/_createNewPostForm.scss
@@ -1,4 +1,3 @@
-
 /* Form Container */
 .form-container {
   position: fixed;
@@ -14,7 +13,7 @@
 }
 
 /* Popup Form Component */
-.PopupForm {
+.CreateNewPostForm {
   padding: 15px;
 
   border-radius: 15px;
@@ -26,29 +25,29 @@
 }
 
 /* Basic Upper section with title and close button */
-.popupForm-title {
+.createNewPostForm-title {
   padding: 5px 0 10px 0;
   border-bottom: solid grey 1px;
 
   display: flex;
   justify-content: center;
 }
-.popupForm-title-item.close {
+.createNewPostForm-title-item.close {
   margin-left: auto;
   cursor: pointer;
 }
-.popupForm-title-item.close:hover {
+.createNewPostForm-title-item.close:hover {
   color: red;
 }
 
 /* User info and icon */
-.popupForm-userInfo {
+.createNewPostForm-userInfo {
   padding: 10px 0 10px 0;
   display: flex;
   align-items: center;
 }
 
-.popupForm-userInfo-data-nav {
+.createNewPostForm-userInfo-data-nav {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,10 +58,10 @@
   cursor: pointer;
 }
 
-.popupForm-userInfo-icon {
+.createNewPostForm-userInfo-icon {
   margin-right: 15px;
 }
-.popupForm-userInfo-icon img {
+.createNewPostForm-userInfo-icon img {
   width: 40px;
   height: auto;
 
@@ -70,7 +69,7 @@
 }
 
 /* Input information */
-.popupForm-input {
+.createNewPostForm-input {
   font-size: 20px;
   width: 90%;
   min-height: 100px;
@@ -80,7 +79,7 @@
 }
 
 /* Sub navbar */
-.popupForm-subNavbar {
+.createNewPostForm-subNavbar {
   padding: 10px;
   display: flex;
   align-items: center;
@@ -104,7 +103,7 @@
 }
 
 /* Form Submit */
-.popupForm-submit {
+.createNewPostForm-submit {
   width: 100%;
 
   font-size: 15px;
@@ -119,7 +118,7 @@
   background-color: var(--fb-blue);
   cursor: pointer;
 }
-.popupForm-submit {
+.createNewPostForm-submit {
   background-color: var(--fb-blue);
 }
 
