add create new account form and fully connect it with our api to process request

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -13,6 +13,7 @@
 @import "./_Home/statusBar";
 // Form Components
 @import "./_forms/createNewPostForm";
+@import "./_forms/createAccountForm";
 
 :root {
   --fb-blue: rgb(26, 115, 228);
