--- a/client/src/styles/_forms/_createNewPostForm.scss
+++ b/client/src/styles/_forms/_createNewPostForm.scss
@@ -1,9 +1,11 @@
 /* Form Container */
 .form-container {
   position: fixed;
+  z-index: 1;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   bottom: 0;
+  right: 0;
 
   background-color: rgba(0, 0, 0, 0.7);
 
@@ -14,6 +16,7 @@
 
 /* Popup Form Component */
 .CreateNewPostForm {
+  position: absolute;
   padding: 15px;
 
   border-radius: 15px;
