--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -14,6 +14,7 @@
 // Form Components
 @import "./_forms/createNewPostForm";
 @import "./_forms/createAccountForm";
+@import "./_forms/deletePostForm";
 
 :root {
   --fb-blue: rgb(26, 115, 228);
