--- a/client/src/styles/_Home/_statusBar.scss
+++ b/client/src/styles/_Home/_statusBar.scss
@@ -2,7 +2,7 @@
   width: 85%;
   padding: 15px 10px 10px 10px;
 
-  border-radius: 15px;
+  border-radius: 0.5rem;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
