--- a/client/src/styles/_components/_navbar.scss
+++ b/client/src/styles/_components/_navbar.scss
@@ -58,6 +58,9 @@
           background-color: rgb(239, 242, 245);
         }
       }
+      .searchIcon {
+        font-size: 20px;
+      }
     }
     .logo {
       color: v.$fb-darkGrey;
