--- a/client/src/styles/_Profile/_Profile.scss
+++ b/client/src/styles/_Profile/_Profile.scss
@@ -1,45 +1,88 @@
 $fb-blue: rgb(26, 115, 228);
 
 .Profile {
-  header {
-    margin-bottom: 25px;
-  }
-}
+  .profileOverview {
+    width: 100vw;
+    .image-backdrop {
+      position: relative;
+      height: clamp(100px, 30vw, 200px);
 
-.profile-main {
-  width: 100%;
+      background: rgb(255, 255, 255);
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 79%,
+        rgba(94, 94, 94, 0.5116421568627452) 100%
+      );
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+      .imageContainer {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        top: clamp(25px, 10vw, 100px);
+        img {
+          position: relative;
+          width: clamp(150px, 40vw, 175px);
+          height: auto;
+          border-radius: 50%;
+          border: white solid 2.5px;
+        }
+      }
+    }
+    .user-backdrop {
+      height: 175px;
 
-  img {
-    width: 200px;
-    border-radius: 50%;
-  }
+      background-color: white;
 
-  .profile-userInfo {
-    text-align: center;
-  }
-  .profile-userInfo p {
-    text-align: left;
-  }
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-end;
+      .user-fullName {
+        font-size: 22px;
+        font-weight: bold;
+        padding-bottom: 5px;
+      }
+      .editProfileButtons {
+        padding-bottom: 5px;
 
-  button {
-    margin-top: 10px;
-    width: 300px;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    cursor: pointer;
-  }
-  .profile-signOut {
-    color: white;
-    background-color: $fb-blue;
-  }
-  .profile-EditInfo {
-    color: white;
-    background-color: rgb(66, 183, 41);
+        display: flex;
+        gap: clamp(10px, 3vw, 30px);
+        button {
+          outline: none;
+          border: none;
+          cursor: pointer;
+          border-radius: 5px;
+          padding: 10px;
+        }
+        .addToStory {
+          background-color: var(--fb-blue);
+          color: white;
+        }
+        .editProfile {
+          background-color: rgb(228, 230, 235);
+        }
+      }
+
+      .profileSections {
+        list-style: none;
+        border-top: solid lightgrey 1px;
+
+        display: flex;
+        gap: clamp(10px, 3vw, 30px);
+        li {
+          color: var(--fb-grey-text);
+          padding: 5px;
+          border-bottom: solid white 2px;
+        }
+        li:hover {
+          border-bottom: solid var(--fb-blue) 2px;
+          color: var(--fb-blue);
+          cursor: pointer;
+        }
+        .ellipse {
+          margin-left: 20px;
+        }
+      }
+    }
   }
 }
