--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import "./Home/statusBar";
 // Profile Components
 @import "./Profile/profileOverview";
+@import "./Profile/aboutCreator";
 // Form Components
 @import "./forms/createNewPostForm";
 @import "./forms/createAccountForm";
