add boilerplate for friendsTab and messagesTab in profile page

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -15,6 +15,9 @@
 // Profile Components
 @import "./Profile/profileOverview";
 @import "./Profile/aboutCreator";
+@import "./Profile/friendsTab";
+@import "./Profile/messagesTab";
+
 // Form Components
 @import "./forms/createNewPostForm";
 @import "./forms/createAccountForm";
