--- a/client/src/styles/Profile/_aboutCreator.scss
+++ b/client/src/styles/Profile/_aboutCreator.scss
@@ -52,6 +52,7 @@
         justify-content: center;
         gap: 20px;
         .socialsIcon {
+          cursor: pointer;
           font-size: 25px;
         }
       }
