--- a/client/src/styles/Profile/_aboutCreator.scss
+++ b/client/src/styles/Profile/_aboutCreator.scss
@@ -9,7 +9,7 @@
     height: 300px;
 
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    border-radius: 0.5 rem;
+    border-radius: 5px;
 
     background-color: white;
     display: flex;
