implement friendsTab showcasing any friends, requested friends, and received friend requests

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -15,7 +15,8 @@
 // Profile Components
 @import "./Profile/profileOverview";
 @import "./Profile/aboutCreator";
-@import "./Profile/friendsTab";
+@import "./Profile/friendsTab/friendsTab";
+@import "./Profile/friendsTab/friend";
 @import "./Profile/messagesTab";
 
 // Form Components
