implement front end toprocess profile picture change

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -18,11 +18,11 @@
 @import "./Profile/friendsTab/friendsTab";
 @import "./Profile/friendsTab/friend";
 @import "./Profile/messagesTab";
-
 // Form Components
 @import "./forms/createNewPostForm";
 @import "./forms/createAccountForm";
 @import "./forms/deletePostForm";
+@import "./forms/updateImageForm";
 
 :root {
   --fb-blue: rgb(26, 115, 228);
