--- a/client/src/styles/Profile/_profileOverview.scss
+++ b/client/src/styles/Profile/_profileOverview.scss
@@ -38,6 +38,13 @@
       font-size: 22px;
       font-weight: bold;
       padding-bottom: 5px;
+      display: flex;
+      align-items: center;
+
+      .editNameIcon {
+        cursor: pointer;
+        font-size: 19px;
+      }
     }
     .editProfileButtons {
       padding-bottom: 5px;
