--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -23,6 +23,7 @@
 @import "./forms/createAccountForm";
 @import "./forms/deletePostForm";
 @import "./forms/updateImageForm";
+@import "./forms/editNameForm";
 
 :root {
   --fb-blue: rgb(26, 115, 228);
