make general site more responsive and implement test user on login page

--- a/src/styles/Profile/_profileOverview.scss
+++ b/src/styles/Profile/_profileOverview.scss
@@ -58,11 +58,11 @@
         border-radius: 5px;
         padding: 10px;
       }
-      .addToStory {
+      .editProfileImageBtn {
         background-color: var(--fb-blue);
         color: white;
       }
-      .editProfile {
+      .signOUt {
         background-color: rgb(228, 230, 235);
       }
     }
