--- a/src/styles/Profile/_messagesTab.scss
+++ b/src/styles/Profile/_messagesTab.scss
@@ -15,6 +15,7 @@
 
     background-color: white;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
     img {
@@ -37,6 +38,13 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+      }
+      span {
+        padding: 10px 0;
+        .githubIcon {
+          font-size: 20px;
+          cursor: pointer;
+        }
       }
     }
   }
