add loading Ux component to login page and user resources that take time to load for better ux

--- a/src/styles/components/_loadingUx.scss
+++ b/src/styles/components/_loadingUx.scss
@@ -1,5 +1,7 @@
 .LoadingUx {
-  color: black;
-  font-size: 15px;
-  animation: rotate 1s linear infinite;
+  .loadingUx-icon {
+    color: black;
+    font-size: 20px;
+    animation: rotate 1s linear infinite;
+  }
 }
