--- a/src/styles/LandingPage/_LandingPage.scss
+++ b/src/styles/LandingPage/_LandingPage.scss
@@ -25,6 +25,7 @@ $fb-blue: rgb(26, 115, 228);
   }
 
   form {
+    position: relative;
     width: 300px;
     height: 275px;
 
@@ -59,6 +60,23 @@ $fb-blue: rgb(26, 115, 228);
 
       color: white;
       background-color: rgb(66, 183, 41);
+    }
+    .loadingUx {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0px;
+
+      background-color: rgba(0, 0, 0, 0.5);
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .loadingIcon {
+        font-size: 40px;
+        animation: rotate 1s linear infinite;
+        color: white;
+      }
     }
   }
 }
