--- a/src/styles/Profile/FriendsTab/_friendsTab.scss
+++ b/src/styles/Profile/FriendsTab/_friendsTab.scss
@@ -1,12 +1,12 @@
 .FriendsTab {
   width: 100vw;
+  min-height: fit-content;
   margin-top: 5px;
 
   display: flex;
   justify-content: center;
   .content {
     width: clamp(310px, 95vw, 700px);
-    height: 300px;
 
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     border-radius: 5px;
