--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,6 +48,9 @@ a:active {
   text-decoration: none;
   color: inherit;
 }
+a {
+  color: inherit;
+}
 
 html {
   background-color: var(--fb-lightGrey);
