--- a/src/styles/components/_loadingUx.scss
+++ b/src/styles/components/_loadingUx.scss
@@ -5,3 +5,24 @@
     animation: rotate 1s linear infinite;
   }
 }
+
+.FullPageLoading {
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+
+  background-color: rgb(0, 0, 0, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .icon {
+    color: white;
+    font-size: 40px;
+    animation: rotate 1s linear infinite;
+  }
+}
